* css fix: toggle expand/collapse icons were jumping 1px

--- a/asset/css/task.css
+++ b/asset/css/task.css
@@ -49,7 +49,7 @@
 .task h3 a.expanded {
 	height:20px;
 	width:15px;
-	background:url(../../../../core/asset/img/tree-icons.png) no-repeat 0 7px;
+	background:url(../../../../core/asset/img/tree-icons.png) no-repeat 1px 7px;
 }
 
 .task h3 .headLabel {
